--- a/dice-roll/src/App.css
+++ b/dice-roll/src/App.css
@@ -1,38 +1,64 @@
-.App {
+.app {
+  background-color: rosybrown;
+  border-width: 5px;
+  border-style: solid;
+  display: flex;
+  width: 500px;
+  height: 300px;
+  margin: 0 auto;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  
+}
+
+.dice {
+  background-color: white;
+  margin: 10px;
+  width: 186px;
+  height: 186px;
+  border-style: solid;
+  font-size: 155px;
+  font-weight: bold;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.previous {
+  background-color: white;
+  margin: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap;
+  height: 186px;
+  width: 186px;
+  border-style: solid;
+  font-size: 20px;
+  align-content: flex-start;
+}
+
+h1 {
+  text-align: center;
+  font-family: 'Sansita Swashed', cursive;
+  font-size: 80px;
+}
+
+.eachlast {
+  width: 25px;
+  height: 25px;
+  background-color: cadetblue;
+  text-align: center;
+  padding: 2px;
+  margin: 1px;
+  font-weight: bold;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+table {
+  background-color: white;
+  border-collapse: collapse;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+th, td {
+  border-style: solid;
+  text-align: center;
+  vertical-align: center;
+  width: 60px;
 }
