--- a/order-food/src/App.css
+++ b/order-food/src/App.css
@@ -1,38 +1,62 @@
-.App {
+* {
+  font-family: 'Handlee', cursive;
+  font-size: 16px;
+
+}body {
+  background-image: linear-gradient(rosybrown, rgb(224, 140, 101));
+}
+
+.app {
+  margin: 20px;
+  padding: 20px; 
+
+}
+
+.sections {
+margin-left: 100px;
+
+}
+
+h1, h2, h3 {
+  font-family: 'Pacifico', cursive;
+}
+
+h1 {
+  font-size: 50px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2 {
+  font-size: 30px;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h3 {
+  font-size: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.indiv {
+  display: grid;
+grid-template-columns: repeat(3, 1fr);
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  width: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cart {
+  padding: 20px;
+padding-left: 100px;
+
+}
+
+.small {
+  border-style: solid;
+  border-radius: 3rem;
+  background-color: beige;
+width: 600px;
+margin-left: 50px, auto;
+;
+
+
 }
