app has basic functionality

--- a/order-food/src/App.css
+++ b/order-food/src/App.css
@@ -1,24 +1,25 @@
 * {
-  font-family: 'Handlee', cursive;
+  font-family: "Handlee", cursive;
   font-size: 16px;
-
-}body {
-  background-image: linear-gradient(rosybrown, rgb(224, 140, 101));
+}
+body {
+  background-image: linear-gradient(rosybrown, rgb(217, 135, 97));
+  background-size: 1000px;
 }
 
 .app {
   margin: 20px;
-  padding: 20px; 
-
+  padding: 20px;
 }
 
 .sections {
-margin-left: 100px;
-
+  margin-left: 100px;
 }
 
-h1, h2, h3 {
-  font-family: 'Pacifico', cursive;
+h1,
+h2,
+h3 {
+  font-family: "Pacifico", cursive;
 }
 
 h1 {
@@ -37,7 +38,7 @@ h3 {
 
 .indiv {
   display: grid;
-grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
 }
 
 button {
@@ -46,17 +47,20 @@ button {
 
 .cart {
   padding: 20px;
-padding-left: 100px;
-
+  padding-left: 100px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .small {
   border-style: solid;
   border-radius: 3rem;
   background-color: beige;
-width: 600px;
-margin-left: 50px, auto;
-;
+  width: 600px;
+  margin-left: 50px, auto;
+  margin-bottom: 500px;
+}
 
-
+.total {
+  font-weight: 1000;
 }
