--- a/chooser/src/App.css
+++ b/chooser/src/App.css
@@ -1,38 +1,72 @@
-.App {
+.viewA {
+  background-color: cadetblue;
+  border-radius: 3rem;
+  border-style: solid;
+  width: 600px;
+  margin-left: 300px;
+  padding: 20px;
+}
+
+* {
+  font-family: 'Bubblegum Sans', cursive;
+  font-size: 20px;
+}
+
+.viewB {
+  background-color: rosybrown;
+  border-radius: 3rem;
+  border-style: solid;
+  width: 600px;
+  margin-left: 200px;
+  padding: 20px;
+}
+
+.top {
+  text-align: center;
+  padding: 20px;
+}
+
+.voteBlock {
+  text-align: center;
+  padding: 20px;
+
+}
+
+.choice {
+  color: white;
+  font-size: 60px;
+
+}
+
+.buttonrow {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 20px;
+}
+
+.startButton {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.lists {
+  margin: 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-evenly;
+}
+
+.submitBar {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.add {
+  background-color: lightgrey;
+  padding: 20px;
+  border-radius: 3rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.match {
+  font-size: 35px;
+  text-align: center;
 }
